// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Liquid Basic 1`] = `
"<div>
  <input value=\\"{{name}}\\" />

  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
"
`;

exports[`Liquid Button 1`] = `
"<div>
  {% if link %}

  <a href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Form block 1`] = `
"<form validate=\\"{{validate}}\\" method=\\"{{method}}\\" name=\\"{{name}}\\"></form>
<style>
  .pre-1 {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>
"
`;

exports[`Liquid Img 1`] = `
"<img alt=\\"{{altText}}\\" src=\\"{{imgSrc}}\\" />
"
`;

exports[`Liquid Input block 1`] = `
"<input
  placeholder=\\"{{placeholder}}\\"
  type=\\"{{type}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  required=\\"{{required}}\\"
/>
"
`;

exports[`Liquid RawText 1`] = `
"<span></span>
"
`;

exports[`Liquid Section 1`] = `
"<section>{{children}}</section>
"
`;

exports[`Liquid Select block 1`] = `
"<select value=\\"{{value}}\\" defaultValue=\\"{{defaultValue}}\\" name=\\"{{name}}\\">
  {% for option in options %}
  <option value=\\"{{option.value}}\\"></option>
  {% endfor %}
</select>
"
`;

exports[`Liquid Stamped.io 1`] = `
"<div>
  <button>Write a review</button>

  {% if showReviewPrompt %}

  <input placeholder=\\"Email\\" />

  <input placeholder=\\"Title\\" class=\\"input-1\\" />

  <textarea
    placeholder=\\"How was your experience?\\"
    class=\\"textarea-1\\"
  ></textarea>

  <button class=\\"button-1\\">Submit</button>

  {% endif %} {% for review in reviews %}
  <div class=\\"div-1\\">
    <img class=\\"img-1\\" src=\\"{{review.avatar}}\\" />

    <div>
      <div>{{review.author}}</div>

      <div>{{review.reviewMessage}}</div>
    </div>
  </div>
  {% endfor %}
</div>
<style>
  .input-1 {
    display: block;
  }
  .textarea-1 {
    display: block;
  }
  .button-1 {
    display: block;
  }
  .div-1 {
    margin: 10px;
    padding: 10px;
    background: white;
    display: flex;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
  .img-1 {
    height: 30px;
    width: 30px;
    margin-right: 10px;
  }
</style>
"
`;

exports[`Liquid Submit button block 1`] = `
"<button type=\\"submit\\">{{text}}</button>
"
`;

exports[`Liquid Text 1`] = `
"<div></div>
"
`;

exports[`Liquid Textarea 1`] = `
"<textarea
  placeholder=\\"{{placeholder}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
></textarea>
"
`;

exports[`Liquid Video 1`] = `
"<video
  preload=\\"none\\"
  poster=\\"{{posterImage}}\\"
  autoplay=\\"{{autoPlay}}\\"
  muted=\\"{{muted}}\\"
  controls=\\"{{controls}}\\"
  loop=\\"{{loop}}\\"
></video>
"
`;
